--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+# Sandbox
+code/accesslist.txt
+Properties
+.intermediate
+tools_asset_info.bin
+*.csproj
+*.los
 
+# User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
 *.blend
 *.blend1
+
+# Build results
+[Oo]bj/
+*_bakeresourcecache
